# cuda-quantum-simulator

./: .gitignore  CMakeLists.txt  README.md  cuda.supp  valgrind.sh
.github/workflows/: build-test.yml
benchmarks/: benchmark_custatevec.cu  benchmark_gates.cu  benchmark_hadamard.cu  benchmark_optimized.cu  benchmark_scaling.cu  plot_benchmarks.py
include/: Circuit.hpp  Constants.hpp  CudaMemory.cuh  DensityMatrix.cuh  Gates.cuh  NoiseModel.cuh  OptimizedGates.cuh  Simulator.hpp  StateVector.cuh
src/: Circuit.cpp  DensityMatrix.cu  Gates.cu  NoiseModel.cu  OptimizedGates.cu  Simulator.cu  StateVector.cu  main.cpp
tests/: test_boundary.cu  test_density_matrix.cu  test_gate_algebra.cu  test_gates.cu  test_gpu_cpu_equivalence.cu  test_noise.cu  test_optimized_gates.cu  test_statevector.cu  test_warmup.cu
validation/: requirements.txt  validate_against_cirq.py  validate_against_qiskit.py
